[DOC]- Fixed bug #45956 (parse_ini_file() does not return false with syntax errors in parsed file) [DOC] note: change will be in since 5.2.7