ext/standard/basic_functions.c
@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: basic_functions.c,v 1.928 2008/08/22 15:51:50 felipe Exp $ */
+/* $Id: basic_functions.c,v 1.929 2008/08/31 00:19:20 jani Exp $ */
 
 #include "php.h"
 #include "php_streams.h"
@@ -6491,7 +6491,11 @@ PHP_FUNCTION(parse_ini_file)
 	fh.type = ZEND_HANDLE_FILENAME;
 
 	array_init(return_value);
-	zend_parse_ini_file(&fh, 0, scanner_mode, ini_parser_cb, return_value TSRMLS_CC);
+	if (zend_parse_ini_file(&fh, 0, scanner_mode, ini_parser_cb, return_value TSRMLS_CC) == FAILURE) {
+		zend_hash_destroy(Z_ARRVAL_P(return_value));
+		efree(Z_ARRVAL_P(return_value));
+		RETURN_FALSE;
+	}
 }
 /* }}} */
 
