ext/standard/tests/general_functions/parse_ini_file.phpt
@@ -116,12 +116,10 @@ Warning: parse_ini_file() expects at most 3 parameters, 4 given in %sparse_ini_f
 bool(false)
 
 Warning: parse_ini_file(%sparse_ini_file.dat): failed to open stream: No such file or directory in %sparse_ini_file.php on line 8
-array(0) {
-}
+bool(false)
 
 Warning: parse_ini_file(%sparse_ini_file.dat): failed to open stream: No such file or directory in %sparse_ini_file.php on line 9
-array(0) {
-}
+bool(false)
 array(1) {
   [u"test"]=>
   unicode(0) ""
@@ -129,17 +127,11 @@ array(1) {
 
 Warning: %s error%sin %sparse_ini_file.dat on line 2
  in %sparse_ini_file.php on line 20
-array(1) {
-  [u"test"]=>
-  unicode(0) ""
-}
+bool(false)
 
 Warning: %serror%sin %sparse_ini_file.dat on line 2
  in %sparse_ini_file.php on line 26
-array(1) {
-  [u"test"]=>
-  unicode(4) "test"
-}
+bool(false)
 array(1) {
   [u"test"]=>
   unicode(8) "new
